--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ const stats = [
   },
   {
     number: '100%',
-    label: 'Confianza consolidada en cada entrega'
+    label: 'Compromiso en cada entrega'
   }
 ];
 ---
