--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import ServicesSection from '../components/ServicesSection.astro';
 import WhyChooseSection from '../components/WhyChooseSection.astro';
 ---
 
-<BaseLayout title="Printek - Industrial & IT Sourcing">
+<BaseLayout title="Printek">
   <Hero 
     title="Industrial & IT Sourcing"
     subtitle="Estrategias personalizadas para el abastecimiento industrial."
