--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -329,7 +329,7 @@ const services = [
                     </svg>
                     <div>
                       <p class="font-semibold text-slate-800">Dirección:</p>
-                      <p class="text-slate-600">Manzanero 1918, Col. Sandra Lucía<br>Cd. Juárez, Chih. 32530</p>
+                      <p class="text-slate-600">Calle Manzanero 1918, Oficina MV117, Col. Sandra Lucía, Ciudad Juárez, Chihuahua, 32530</p>
                     </div>
                   </div>
                 </div>
